# music-video-gen

./: .env.example  .gitignore  CLAUDE.md  IMPLEMENTATION.md  README.md  pyproject.toml  requirements.txt
src/mvg/: __init__.py  cli.py  config.py
src/mvg/agents/: __init__.py  base.py  research.py
src/mvg/editor/: __init__.py  audio.py  compositor.py  overlays.py
src/mvg/models/: __init__.py  manifest.py  project.py  scene.py
src/mvg/services/: __init__.py  anthropic.py  imagen.py  veo.py
templates/prompts/: research.txt
