[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "music-video-gen"
version = "0.1.0"
description = "CLI tool to create video content from idea to final render using AI agents and Google Veo 3"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Zhi Han", email = "zhi.han@gmail.com"}
]
dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "moviepy>=2.0",
    "pillow>=10.0",
    "numpy>=1.24",
    "anthropic>=0.42.0",
    "google-cloud-aiplatform>=1.70.0",
    "google-cloud-storage>=2.10.0",
    "google-auth>=2.0.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.3.0",
    "mypy>=1.8",
]

[project.scripts]
video-maker = "mvg.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
